--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   ],
   "scripts": {
     "dev": "nodemon server.js",
-    "start": "env NODE_ENV=production node server.js",
+    "start": "npm run client-install && npm run client-build && env NODE_ENV=production node server.js",
+    "start:back": "env NODE_ENV=production node server.js",
+    "start:front": "env NODE_ENV=production cd face && start",
     "client": "cd face && yarn start",
     "client-build": "cd face && yarn build",
     "client-install": "cd face && yarn install",
