--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   ],
   "scripts": {
     "dev": "nodemon server.js",
-    "start": "npm run client-install && npm run client-build && env NODE_ENV=production node server.js",
+    "start": "yarn client-install && yarn client-build && env NODE_ENV=production node server.js",
     "start:back": "env NODE_ENV=production node server.js",
     "start:front": "env NODE_ENV=production cd face && start",
     "client": "cd face && yarn start",
