prepare for heroku

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "start": "env NODE_ENV=production node server.js",
     "start:back": "env NODE_ENV=production node server.js",
     "start:front": "env NODE_ENV=production cd face && start",
-    "heroku-postbuild": "cd face && yarn && yarn build",
+    "heroku-postbuild": "yarn global add allure-commandline && cd face && yarn && yarn build",
     "client": "cd face && yarn start",
     "client-build": "cd face && yarn build",
     "client-install": "cd face && yarn install",
